--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,10 @@ section{
     margin-top: 80px;
 }
 
+footer{
+    background-color: black;
+}
+
 /* properties */
 .display_flex{
     display: flex;
@@ -47,6 +51,10 @@ section{
 
 .vertical_align_top{
     vertical-align: top;
+}
+
+.vertical_align_center{
+    vertical-align: middle;
 }
 
 /* end properties */
@@ -105,6 +113,60 @@ header .container_full{
     }
 
     /* end prova gratuita section */
+    /* FAQ section */
+
+    #faq h4{
+        padding: 30px 0px
+    }
+    
+    /* FAQ section */
+    /* info_e_privacy section */
+
+    #info_e_privacy{
+        color: white;
+    }
+
+    .spacing_30px{
+        height: 30px;
+    }
+
+    #info_e_privacy ul{
+        list-style-type: none;
+        line-height: 2em;
+    }
+
+    #info_e_privacy h3{
+        padding-bottom: 20px;
+    }
+    
+    li button{
+        border: 0px;
+        background-color: transparent;
+        color: white;
+    }
+
+    li a{
+        text-decoration: none;
+        color: white;
+    }
+
+    /* end info_e_privacy section */
+    /* language section */
+
+    #language .row{
+        margin: 0px;
+        padding: 50px 0px; 
+    }
+
+    #language{
+        color: rgb(147, 147, 147);
+    }
+
+    .border_line{
+        width: 120px;
+        border-bottom: 1px solid lightgray;
+    }
+    /* end language section */
 /* end main content */
 
 .col_100, .w_100, .container_full{
@@ -132,6 +194,10 @@ header .container_full{
 
 .row{
     width: 100%;
+}
+
+.col_15{
+    width: 15%;
 }
 
 .col_30{
